# 2dge

./: .cmake-format.py  CMakeLists.txt  README.md  toolchain_clang.cmake
src/: main.cpp
src/components/: transform.h
src/ecs/: ecs.cpp  ecs.hpp
src/game/: game.cpp  game.hpp
src/logger/: logger.cpp  logger.hpp
src/systems/: movement.h
